--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Customer Relationship Management Dashboard - CSPL</title>
 
+    <!-- nunito font -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Boogaloo&family=Carrois+Gothic+SC&family=DM+Serif+Display:ital@0;1&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Grand+Hotel&family=Luckiest+Guy&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
      <meta charset="utf-8" />
     <title>Paysol | John & jo's Resturant</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
